--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<html>
+  <head>
+ <title> projeto soma </title>
+ <script> type= "text/ javascript"
+ src= " script.js"> </ script>
+  <link rel= "stylesheet"
+  href= "style.css"/>
+  </head>
+  <body>
+  <h1> 10+15= </h1>
+  <input type = "button" onclick= "mostraresultado ( )" value = "calcular" id = "botã'/>
+  </body>
+  </html>
+   
